github/mobile: Put back needed PATH export
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/.github/workflows/_mobile_container_ci.yml
+++ b/.github/workflows/_mobile_container_ci.yml
@@ -65,6 +65,7 @@ on:
         type: string
         default: |
           #!/bin/bash -e
+          export PATH=/opt/llvm/bin:$PATH
           git config --global --add safe.directory /source
           exec "$@"
       error-match:
