use the extension
Signed-off-by: Dan Zhang <danzh@google.com>

--- a/source/extensions/quic/client_packet_writer/BUILD
+++ b/source/extensions/quic/client_packet_writer/BUILD
@@ -22,13 +22,16 @@ envoy_cc_library(
         "//envoy/registry",
         "//source/common/quic:envoy_quic_client_packet_writer_factory_interface",
         "//source/common/quic:quic_client_packet_writer_factory_impl_lib",
-        "//api/envoy/extensions/quic/client_writer_factory/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/quic/client_writer_factory/v3:pkg_cc_proto",
     ]),
     alwayslink = LEGACY_ALWAYSLINK,
 )
 
 envoy_cc_extension(
     name = "default_quic_client_packet_writer_factory_config",
+        extra_visibility = [
+        "//source/common/quic:__subpackages__",
+    ],
     deps = [
         ":default_quic_client_packet_writer_factory_config_lib",
     ],
