--- a/source/common/quic/BUILD
+++ b/source/common/quic/BUILD
@@ -188,13 +188,13 @@ envoy_cc_library(
         ":envoy_quic_connection_helper_lib",
         ":envoy_quic_proof_verifier_lib",
         ":envoy_quic_utils_lib",
-        ":quic_client_packet_writer_factory_impl_lib",
         "//envoy/http:codec_interface",
         "//envoy/http:persistent_quic_info_interface",
         "//envoy/registry",
         "//source/common/runtime:runtime_lib",
         "//source/common/tls:client_ssl_socket_lib",
         "//source/extensions/quic/crypto_stream:envoy_quic_crypto_client_stream_lib",
+        "//source/extensions/quic/client_packet_writer:default_quic_client_packet_writer_factory_config",
         "@com_github_google_quiche//:quic_core_http_spdy_session_lib",
     ]),
 )
