router: added retry_policy to HttpProtocolOptions to support retries (#42077)
## Description

This PR adds a new `retry_policy` to `HttpProtocolOptions` to support
retries on the cluster level so that all the routes that goes to this
upstream cluster gets it.

---

**Commit Message:** router: added retry_policy to HttpProtocolOptions to
support retries
**Additional Description:** Adds a new `retry_policy` to
`HttpProtocolOptions` to support retries on the cluster level so that
all the routes that goes to this upstream cluster gets it.
**Risk Level:** Low
**Testing:** Added Unit & Integration Tests
**Docs Changes:** Added
**Release Notes:** Added

---------

Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -347,6 +347,11 @@ new_features:
     cluster-level request mirroring. Cluster-level policies override route-level policies when both are configured.
 - area: router
   change: |
+    Added :ref:`retry_policy <envoy_v3_api_field_extensions.upstreams.http.v3.HttpProtocolOptions.retry_policy>`
+    to :ref:`HttpProtocolOptions <envoy_v3_api_msg_extensions.upstreams.http.v3.HttpProtocolOptions>` to support
+    cluster-level retry policies.
+- area: router
+  change: |
     Added :ref:`hash_policy <envoy_v3_api_field_extensions.upstreams.http.v3.HttpProtocolOptions.hash_policy>`
     to :ref:`HttpProtocolOptions <envoy_v3_api_msg_extensions.upstreams.http.v3.HttpProtocolOptions>` to support
     cluster-level hash policies.
