--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -95,6 +95,12 @@ bug_fixes:
     For common HTTP/2 headers (such as ``:method``, ``:path``, ``:status``, ``content-type``, ``user-agent``, etc.),
     Envoy now references static strings instead of copying header names. This reduces memory allocations and improves
     performance for typical HTTP/2 traffic.
+- area: ext_authz
+  change: |
+    Fixed HTTP ext_authz client to correctly respect user-configured ``retry_on`` conditions in the
+    :ref:`retry_policy <envoy_v3_api_field_config.core.v3.RetryPolicy.retry_on>`. Previously, the
+    configured ``retry_on`` value was being overridden with hardcoded defaults
+    ``5xx,gateway-error,connect-failure,reset``, causing user-specified retry conditions to be ignored.
 - area: lua
   change: |
     Fixed a bug where Lua filters could cause Envoy to crash when setting the response body to a payload larger
