--- a/test/extensions/certificate_selectors/on_demand/BUILD
+++ b/test/extensions/certificate_selectors/on_demand/BUILD
@@ -26,21 +26,12 @@ envoy_extension_cc_test(
     ],
     rbe_pool = "6gig",
     deps = [
-        "//source/common/config:api_version_lib",
-        "//source/common/config:protobuf_link_hacks",
-        "//source/common/event:dispatcher_includes",
-        "//source/common/event:dispatcher_lib",
-        "//source/common/network:connection_lib",
-        "//source/common/network:utility_lib",
-        "//source/common/tls:context_config_lib",
-        "//source/common/tls:context_lib",
         "//source/extensions/certificate_selectors/on_demand:config",
+        "//source/extensions/filters/network/tcp_proxy:config",
         "//source/extensions/transport_sockets/tls:config",
         "//test/common/grpc:grpc_client_integration_lib",
         "//test/config/integration/certs:certs_info",
-        "//test/integration:http_integration_lib",
-        "//test/mocks/runtime:runtime_mocks",
-        "//test/mocks/secret:secret_mocks",
+        "//test/integration:tcp_proxy_integration_test_lib",
         "//test/test_common:resources_lib",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
